outline_error_3.txt
    Checking deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
warning: unused import: `init_code_mirror`
 --> apps\web\src\editor\hook.rs:7:18
  |
7 | use super::ffi::{init_code_mirror, applyRemoteContent, applyRemoteOp, getEditorContent, SendJsValue};
  |                  ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `leptos::prelude::*`
 --> apps\web\src\i18n.rs:1:5
  |
1 | use leptos::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^

error[E0382]: borrow of moved value: `text`
   --> apps\web\src\components\outline.rs:74:36
    |
 66 |   ...   let text = header.text.clone();
    |             ---- move occurs because `text` has type `std::string::String`, which does not implement the `Copy` trait
...
 69 | / ...   view! {
 70 | | ...       <div 
 71 | | ...           class="py-1 pr-2 text-sm text-gray-600 hover:bg-gray-100 hover:text-gray-900 cursor-pointer rounded transition-colors trunc...
 72 | | ...           style={padding}
 73 | | ...           on:click=move |_| on_click.run(line)
 74 | | ...           title={text.clone()}
    | |                      ^^^^ value borrowed here after move
...   |
 77 | | ...       </div>
 78 | | ...   }
    | |_______- `text` moved due to this method call
    |
note: `into_render` takes ownership of the receiver `self`, which moves `text`
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tachys-0.1.9\src\view\mod.rs:438:20
    |
438 |     fn into_render(self) -> Self::Output;
    |                    ^^^^
help: you can `clone` the value and consume it, but this might not be your desired behavior
    |
 76 |                             {text.clone()}
    |                                  ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `deve_web` (bin "deve_web") generated 2 warnings
error: could not compile `deve_web` (bin "deve_web") due to 1 previous error; 2 warnings emitted
